--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "baseimage"]
 	path = baseimage
-	url = git@github.com:phusion/baseimage-docker.git
+	url = https://github.com/phusion/baseimage-docker.git
