Make sure to update the submodule before start building

--- a/images/ubuntu15.04/Makefile
+++ b/images/ubuntu15.04/Makefile
@@ -11,6 +11,7 @@ build: clean prepare
 	docker build -t $(NAME):$(VERSION) --rm $(CONTEXT)
 
 prepare:
+	git submodule update --init
 	mkdir -p $(CONTEXT)
 	cp -r $(BASEIMAGE)/* $(CONTEXT)/
 	cp -r ../../runit $(CONTEXT)/
