--- a/3_ubuntu1510_python3/Dockerfile
+++ b/3_ubuntu1510_python3/Dockerfile
@@ -2,10 +2,12 @@ FROM jumpscale/ubuntu1510
 
 MAINTAINER JumpScale
 
+ADD ../scripts /bd_build
 ADD . /bd_build
+
 
 ENV HOME /root/
 
-RUN /bd_build/python.sh
+RUN /bd_build/python.sh && /bd_build/cleanup.sh
 
 CMD ["/sbin/my_init"]
