--- a/4_ubuntu1510_js8/Dockerfile
+++ b/4_ubuntu1510_js8/Dockerfile
@@ -2,7 +2,7 @@ FROM jumpscale/ubuntu1510_python3
 
 MAINTAINER JumpScale
 
-ADD ../scripts /bd_build
+#ADD ../scripts /bd_build
 ADD . /bd_build
 
 
