Add vulcand at the rundocker root and remove runit files

--- a/6_ovc_supermaster/services/5_vulcand/Dockerfile
+++ b/6_ovc_supermaster/services/5_vulcand/Dockerfile
@@ -2,6 +2,6 @@ FROM scratch
 
 MAINTAINER GreenITGlobe
 
-COPY vulcand /vulcand/vulcand
+COPY vulcand /
 
-ENTRYPOINT ["/vulcand/vulcand"]
+ENTRYPOINT ["/vulcand"]
