Adding command after all builds

--- a/js8/x86_64/7_ubuntu1510_buildbox/Dockerfile
+++ b/js8/x86_64/7_ubuntu1510_buildbox/Dockerfile
@@ -14,3 +14,4 @@ RUN /bd_build/etcd.sh && \
 	/bd_build/agentcontroller.sh
 
 CMD ["/sbin/my_init"]
+CMD ["js 'j.tools.cuisine.local.builder.all()'"]
