--- a/js8/x86_64/7_ubuntu1510_buildbox/Dockerfile
+++ b/js8/x86_64/7_ubuntu1510_buildbox/Dockerfile
@@ -7,7 +7,7 @@ ADD . /bd_build
 
 ENV HOME /root/
 
-RUN /bd_build/etcd.sh && \
+RUN bash /bd_build/etcd.sh && \
 	/bd_build/redis.sh && \
 	/bd_build/skydns.sh && \
 	/bd_build/vulcand.sh && \
