--- a/js8/x86_64/3_ubuntu1510_python3/Dockerfile
+++ b/js8/x86_64/3_ubuntu1510_python3/Dockerfile
@@ -8,6 +8,6 @@ ADD . /bd_build
 ENV HOME /root/
 
 RUN bash /bd_build/build.sh && \
-	/bd_build/clean.sh
+	bash /bd_build/clean.sh
 
 CMD ["/sbin/my_init"]
