Trying to produce an error

--- a/js8/x86_64/4_ubuntu1510_js8/Dockerfile
+++ b/js8/x86_64/4_ubuntu1510_js8/Dockerfile
@@ -11,4 +11,4 @@ RUN bash /bd_build/build.sh
 
 
 CMD ["/sbin/my_init"]
-CMD ["js 'j.tools.cuisine.local.builder.all()'"]
+CMD ["js 'j.tool.cuisine.local.builder.all()'"]
