Adding portal installation to commands

--- a/js8/x86_64/4_ubuntu1510_js8/Dockerfile
+++ b/js8/x86_64/4_ubuntu1510_js8/Dockerfile
@@ -11,6 +11,7 @@ RUN bash /bd_build/build.sh
 
 RUN js 'j.tools.cuisine.local.installerdevelop.pip()'
 RUN js 'j.tools.cuisine.local.installerdevelop.python()'
+RUN js 'j.tools.cuisine.apps.cuisine.portal.install(start=start)'
 
 
 CMD ["/sbin/my_init"]
