trying build all method again

--- a/js8/x86_64/4_ubuntu1510_js8/Dockerfile
+++ b/js8/x86_64/4_ubuntu1510_js8/Dockerfile
@@ -9,9 +9,7 @@ ENV HOME /root/
 
 RUN bash /bd_build/build.sh
 
-RUN js 'j.tools.cuisine.local.installerdevelop.pip()'
-RUN js 'j.tools.cuisine.local.installerdevelop.python()'
-RUN js 'j.tools.cuisine.apps.cuisine.portal.install(start=start)'
+RUN js 'j.tools.cuisine.local.builder.all()'
 
 
 CMD ["/sbin/my_init"]
