--- a/js8/x86_64/4_ubuntu1510_js8/Dockerfile
+++ b/js8/x86_64/4_ubuntu1510_js8/Dockerfile
@@ -9,7 +9,7 @@ ENV HOME /root/
 
 RUN bash /bd_build/build.sh
 
-RUN js 'j.core.db.flusall()'
+RUN js 'j.core.db.flushall()'
 
 RUN js 'j.tools.cuisine.local.builder.all()'
 
