--- a/js8/x86_64/4_ubuntu1510_js8/Dockerfile
+++ b/js8/x86_64/4_ubuntu1510_js8/Dockerfile
@@ -14,7 +14,7 @@ RUN js 'j.core.db.flushall()'
 RUN js 'j.tools.cuisine.local.installerdevelop.pip()'
 RUN js 'j.tools.cuisine.local.installerdevelop.python()'
 RUN js 'j.tools.cuisine.local.portal.install(start=True)'
-RUN js 'j.tools.cuisine.local.redis.build(start=True, force=True)'
+RUN js 'j.tools.cuisine.local.redis.build(start=True)'
 RUN js 'j.tools.cuisine.local.core.build(start=True)'
 RUN js 'j.tools.cuisine.local.syncthing.build(start=True)'
 RUN js 'j.tools.cuisine.local.controller.build(start=True)'
