--- a/js8/x86_64/4_ubuntu1510_js8/Dockerfile
+++ b/js8/x86_64/4_ubuntu1510_js8/Dockerfile
@@ -11,20 +11,8 @@ RUN bash /bd_build/build.sh
 
 RUN js 'j.core.db.flushall()'
 
-RUN js 'j.tools.cuisine.local.installerdevelop.pip()'
-RUN js 'j.tools.cuisine.local.installerdevelop.python()'
-RUN js 'j.tools.cuisine.local.portal.install(start=True)'
-RUN js 'j.tools.cuisine.local.core.build(start=True)'
-RUN js 'j.tools.cuisine.local.syncthing.build(start=True)'
-RUN js 'j.tools.cuisine.local.controller.build(start=True)'
-RUN js 'j.tools.cuisine.local.fs.build(start=True)'
-RUN js 'j.tools.cuisine.local.stor.build(start=True)'
-RUN js 'j.tools.cuisine.local.etcd.build(start=True)'
-RUN js 'j.tools.cuisine.local.mongodb.build(start=True)'
-RUN js 'j.tools.cuisine.local.caddy.build(start=True)'
-RUN js 'j.tools.cuisine.local.influxdb.build(start=True)'
-RUN js 'j.tools.cuisine.local.weave.build(start=True)'
-RUN js 'j.tools.cuisine.local.redis.build(start=True)'
+RUN js 'j.tools.cuisine.local.builder.all(start=True)'
+
 
 
 CMD ["/sbin/my_init"]
