--- a/js8/x86_64/4_ubuntu1510_js8/Dockerfile
+++ b/js8/x86_64/4_ubuntu1510_js8/Dockerfile
@@ -11,7 +11,7 @@ RUN bash /bd_build/build.sh
 
 RUN js 'j.core.db.flushall()'
 
-RUN js 'j.tools.cuisine.local.builder.all(start=True)'
+RUN js 'j.tools.cuisine.local.builder.all(start=False, sandbox=True, stor_addr="https://stor.jumpscale.org/storx/")'
 
 
 
