changed the executor to connect to a remote docker

--- a/js8/x86_64/4_ubuntu1510_js8/Dockerfile
+++ b/js8/x86_64/4_ubuntu1510_js8/Dockerfile
@@ -7,13 +7,13 @@ ADD . /bd_build
 
 ENV HOME /root/
 
-ENV TERM="xterm-256color"
+ENV remotedockerip=`diip remote1`
 
 RUN bash /bd_build/build.sh
 
 RUN js 'j.core.db.flushall()'
 
-RUN js 'j.tools.cuisine.local.builder.all(start=False, sandbox=True, stor_addr="https://stor.jumpscale.org/storx/")'
+RUN js 'exc = j.tools.executor.getSSHBased(\"$remotedockerip\", passwd="gig1234"); cuisine = j.tools.cuisine.get(exc); cuisine.builder.all(start=False, sandbox=True, stor_addr="https://stor.jumpscale.org/storx/")'
 
 
 
