encoding err fix + buildall for 1604 + build.sh

--- a/js8/x86_64/4_ubuntu1510_js8/Dockerfile
+++ b/js8/x86_64/4_ubuntu1510_js8/Dockerfile
@@ -5,7 +5,9 @@ MAINTAINER JumpScale
 ADD . /bd_build
 
 
-ENV HOME /root/
+ENV HOME /root/ 
+
+ENV LC_ALL=en_US.UTF-8
 
 RUN bash /bd_build/build.sh
 
