--- a/js8/x86_64/ubuntu1604/5_ubuntu1604_buildall/Dockerfile
+++ b/js8/x86_64/ubuntu1604/5_ubuntu1604_buildall/Dockerfile
@@ -8,6 +8,6 @@ RUN bash /bd_build/build.sh
 
 RUN js 'j.core.db.flushall()'
 
-RUN js 'j.tools.cuisine.local.builder.all(start=True)'
+RUN bash -c "bash /bd_build/build.sh ; js 'j.tools.cuisine.local.builder.all(start=True)'"
 
 CMD ["/sbin/my_init"]
